--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                <li class="port-item mix photography">
                 <a href="info.html">
                   <div class="port-img-overlay">
-                    <img class="port-main-img" src="https://cdn.pixabay.com/photo/2015/05/08/08/49/mountains-757731_1280.jpg" alt="img" >
+                    <img class="port-main-img" src="https://cdn.pixabay.com/photo/2014/10/07/13/48/mt-fuji-477832__480.jpg" alt="img" >
                   </div>
                   <div class="port-overlay-cont">
                     <div class="port-title-cont2">
@@ -317,7 +317,7 @@
                <li class="port-item mix photography">
                 <a href="info.html">
                   <div class="port-img-overlay">
-                    <img class="port-main-img" src="https://cdn.pixabay.com/photo/2015/05/08/08/49/mountains-757731_1280.jpg" alt="img" >
+                    <img class="port-main-img" src="https://cdn.pixabay.com/photo/2017/03/15/13/27/rough-horn-2146181__480.jpg" alt="img" >
                   </div>
                   <div class="port-overlay-cont">
                     <div class="port-title-cont2">
@@ -331,7 +331,35 @@
                <li class="port-item mix photography">
                 <a href="info.html">
                   <div class="port-img-overlay">
-                    <img class="port-main-img" src="https://cdn.pixabay.com/photo/2015/05/08/08/49/mountains-757731_1280.jpg" alt="img" >
+                    <img class="port-main-img" src="https://cdn.pixabay.com/photo/2017/01/16/19/40/mountains-1985027__480.jpg" alt="img" >
+                  </div>
+                  <div class="port-overlay-cont">
+                    <div class="port-title-cont2">
+                      <!-- <h3 class="font-26 font-raleway">Spacesuit</h3>
+                      <span>photography</span> -->
+                    </div>
+                  </div>
+                </a>
+              </li>
+
+              <li class="port-item mix photography">
+                <a href="info.html">
+                  <div class="port-img-overlay">
+                    <img class="port-main-img" src="https://cdn.pixabay.com/photo/2016/08/09/21/54/yellowstone-national-park-1581879__480.jpg" alt="img" >
+                  </div>
+                  <div class="port-overlay-cont">
+                    <div class="port-title-cont2">
+                      <!-- <h3 class="font-26 font-raleway">Spacesuit</h3>
+                      <span>photography</span> -->
+                    </div>
+                  </div>
+                </a>
+              </li>
+
+              <li class="port-item mix photography">
+                <a href="info.html">
+                  <div class="port-img-overlay">
+                    <img class="port-main-img" src="https://cdn.pixabay.com/photo/2015/07/27/17/14/switzerland-862870__480.jpg" alt="img" >
                   </div>
                   <div class="port-overlay-cont">
                     <div class="port-title-cont2">
@@ -515,7 +543,7 @@
               
               <!-- Copyright -->
               <div class="left">
-                <a class="footer2-copy" href="" target="_blank">&copy; Simon Alexander, 2019</a>
+                <a class="footer2-copy" href="https://1.envato.market/a1gQR" target="_blank">&copy; Simon Alexander, 2019</a>
               </div>
 
             </div>
