--- a/index.html
+++ b/index.html
@@ -10,12 +10,21 @@
 
 <html lang="en">
  	<head>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-148506662-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-148506662-1');
+</script>
 		<title>Mountain Photography</title>
 		<meta charset="utf-8">
 		<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
 		<meta name="robots" content="index, follow" > 
 		<meta name="keywords" content="HTML5 Template" > 
-		<meta name="description" content="Elementy - Responsive HTML5 Template" > 
+		<meta name="description" content="This is a website for CS40." > 
 		<meta name="author" content="ABCgomel">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="theme-color" content="#2a2b2f">
@@ -67,6 +76,9 @@
 		
 	</head>
 	<body class="font-raleway">
+
+    <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v4.0"></script>
 	
 		<!-- LOADER -->	
 		<div id="loader-overflow">
@@ -141,6 +153,8 @@
                       <ul class="nav navbar-nav">
                         
                         <!-- MENU ITEM -->
+
+
                         <li class="parent current" >
                           <a href="#" ><div class="main-menu-title" style = "font-family: 'Shadows Into Light' !important; font-size: 21px;" >Home</div></a>
                          
@@ -267,7 +281,9 @@
         <div id="about" class="p-140-cont">
         	<div class="container">
         		<div>
-        			<h3 class="sl2-text font-raleway" style = "font-size: 23px; font-family: 'Shadows Into Light' !important;">"Here are some of my favorite photos. These include both my own and some I've seen from other photographers. I hope you enjoy!"<br>-Simon Alexander, CMC '21</h3>
+              <h1 style = "text-align: center;">Hello.</h1>
+
+        			<h3 class="sl2-text font-raleway" style = "font-size: 23px; font-family: 'Shadows Into Light' !important;">"Here are some of my favorite photos. These include both my own and some I've seen from other photographers. I hope you enjoy!"<br>-Simon Alexander, CMC '21 <br><div class="fb-like" data-href="https://studentsimon.github.io" data-width="" data-layout="button_count" data-action="like" data-size="large" data-show-faces="false" data-share="false"></div></h3>
         		</div>
         	</div>
         </div>
