--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 <div class="rev_slider fullscreenbanner" data-version="5.1.4" id="rev_slider_280_1" style="display:none;">
                     <ul>
                         <!-- SLIDE  -->
-                        <li data-index="rs-673" data-transition="slidingoverlayhorizontal" data-slotamount="default" data-easein="default" data-easeout="default" data-masterspeed="default" data-thumb="https://cdn.pixabay.com/photo/2015/05/08/08/49/mountains-757731_1280.jpg" data-rotate="0" data-saveperformance="off" data-title="Simon Alexander" data-description="">
+                        <li data-index="rs-673" data-transition="slidingoverlayhorizontal" data-slotamount="default" data-easein="default" data-easeout="default" data-masterspeed="default" data-thumb="https://cdn.pixabay.com/photo/2015/05/08/08/49/mountains-757731_1280.jpg" data-rotate="0" data-saveperformance="off" data-title="" data-description="">
                             <!-- MAIN IMAGE -->
                             <img src="images/revo-slider/dummy.png" data-lazyload="https://cdn.pixabay.com/photo/2015/05/08/08/49/mountains-757731_1280.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="5" class="rev-slidebg" data-no-retina>
                             <!-- LAYERS -->
@@ -255,7 +255,7 @@
                             data-paddingleft="[0,0,0,0]"
 
                             style="z-index: 7;">
-                                <div class="rs-looped rs-pulse" data-easing="Power1.easeInOut" data-speed="3" data-zoomstart="0.98" data-zoomend="1"><img src="images/revo-slider/dummy.png" alt="Simon Alexander" width="1400" height="1200" data-ww="['700px','700px','700px','350']" data-hh="['350px','350px','350px','300']" data-lazyload="images/a99.png" data-no-retina>
+                                <div class="rs-looped rs-pulse" data-easing="Power1.easeInOut" data-speed="3" data-zoomstart="0.98" data-zoomend="1"><img src="images/revo-slider/dummy.png" alt="" width="1400" height="1200" data-ww="['700px','700px','700px','350']" data-hh="['350px','350px','350px','300']" data-lazyload="images/a99.png" data-no-retina>
                                 </div>
                             </div>
 
@@ -283,7 +283,7 @@
         		<div>
               <h1 style = "text-align: center;">Hello.</h1>
 
-        			<h3 class="sl2-text font-raleway" style = "font-size: 23px; font-family: 'Shadows Into Light' !important;">"Here are some of my favorite photos. These include both my own and some I've seen from other photographers. I hope you enjoy!"<br>-Simon Alexander, CMC '21 <br><div class="fb-like" data-href="https://studentsimon.github.io" data-width="" data-layout="button_count" data-action="like" data-size="large" data-show-faces="false" data-share="false"></div></h3>
+        			<h3 class="sl2-text font-raleway" style = "font-size: 23px; font-family: 'Shadows Into Light' !important;">"Here are some of my favorite photos. These include both my own and some I've seen from other photographers. I hope you enjoy!"<br>-Simon <br><div class="fb-like" data-href="https://studentsimon.github.io" data-width="" data-layout="button_count" data-action="like" data-size="large" data-show-faces="false" data-share="false"></div></h3>
         		</div>
         	</div>
         </div>
@@ -559,7 +559,7 @@
               
               <!-- Copyright -->
               <div class="left">
-                <a class="footer2-copy" href="https://1.envato.market/a1gQR" target="_blank">&copy; Simon Alexander, 2019</a>
+                <a class="footer2-copy" href="https://1.envato.market/a1gQR" target="_blank">&copy; Simon, 2019</a>
               </div>
 
             </div>
