--- a/sources.html
+++ b/sources.html
@@ -239,7 +239,7 @@
                       <p>I like this picture.<img class="port-main-img" src="https://cdn.pixabay.com/photo/2015/05/08/08/49/mountains-757731_1280.jpg" alt="img" ></p></a>
                    </dd>
                    <dt>
-                     <a href="#">Did I enjoy this project?</a>
+                     <a href="#">Did I enjoy this <span style = "color: gold;">project</span>?</a>
                    </dt>
                    <dd>
                     <p>Yes!</p>
