--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                             data-paddingleft="[0,0,0,0]"
 
                             style="z-index: 7;">
-                                <div class="rs-looped rs-pulse" data-easing="Power1.easeInOut" data-speed="3" data-zoomstart="0.98" data-zoomend="1"><img src="images/revo-slider/dummy.png" alt="" width="1400" height="1200" data-ww="['700px','700px','700px','350']" data-hh="['350px','350px','350px','300']" data-lazyload="images/a99.png" data-no-retina>
+                                <div class="rs-looped rs-pulse" data-easing="Power1.easeInOut" data-speed="3" data-zoomstart="0.98" data-zoomend="1"><img src="images/revo-slider/dummy.png" alt="" width="1400" height="1200" data-ww="['700px','700px','700px','350']" data-hh="['350px','350px','350px','300']" data-lazyload="" data-no-retina>
                                 </div>
                             </div>
 
