--- a/sources.html
+++ b/sources.html
@@ -24,7 +24,7 @@
 		<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
 		<meta name="robots" content="index, follow" > 
 		<meta name="keywords" content="HTML5 Template" > 
-		<meta name="description" content="Mountain Facts CS40" > 
+		<meta name="description" content="Sources Information for Photography" > 
 		<meta name="author" content="ABCgomel">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="theme-color" content="#2a2b2f">
