--- a/sources.html
+++ b/sources.html
@@ -303,7 +303,7 @@
                      <a href="#">What is my favorite picture?</a>
                    </dt>
                    <dd>
-                      <p>I like this picture.<img class="port-main-img" src="https://cdn.pixabay.com/photo/2015/05/08/08/49/mountains-757731_1280.jpg" alt="img" ></p></a>
+                      <p>I like this picture.<img class="port-main-img" src="https://cdn.pixabay.com/photo/2015/05/08/08/49/mountains-757731_1280.jpg" alt="Mountain Image" ></p></a>
                    </dd>
                    <dt>
                      <a href="#">Did I enjoy this <span style = "color: gold;">project</span>?</a>
