--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 		<meta charset="utf-8">
 		<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
 		<meta name="robots" content="index, follow" > 
-		<meta name="keywords" content="HTML5 Template" > 
+		<meta name="keywords" content="HTML5" > 
 		<meta name="description" content="This is a website for CS40." > 
-		<meta name="author" content="ABCgomel">
+		<meta name="author" content="Simon Alexander">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="theme-color" content="#2a2b2f">
     
@@ -319,7 +319,7 @@
                <li class="port-item mix photography">
                 <a href="info.html">
                   <div class="port-img-overlay">
-                    <img class="port-main-img" src="https://cdn.pixabay.com/photo/2014/10/07/13/48/mt-fuji-477832__480.jpg" alt="img" >
+                    <img class="port-main-img" src="https://cdn.pixabay.com/photo/2014/10/07/13/48/mt-fuji-477832__480.jpg" alt="Mountain Image" >
                   </div>
                   <div class="port-overlay-cont">
                     <div class="port-title-cont2">
