--- a/faq.html
+++ b/faq.html
@@ -23,9 +23,9 @@
 		<meta charset="utf-8">
 		<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
 		<meta name="robots" content="index, follow" > 
-		<meta name="keywords" content="HTML5 Template" > 
+		<meta name="keywords" content="HTML5" > 
 		<meta name="description" content="Mountain Facts CS40" > 
-		<meta name="author" content="ABCgomel">
+		<meta name="author" content="Simon Alexander">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="theme-color" content="#2a2b2f">
     
@@ -242,7 +242,7 @@
                      <a href="#">What's the best mountain to snowboard?</a>
                    </dt>
                    <dd>
-                    <p>The best mountain to ski is Mammoth Mountain located in California. This is not open to interpretation and is factually 110% accurate.</p><img class="port-main-img" src="https://cdn.pixabay.com/photo/2015/05/08/08/49/mountains-757731_1280.jpg" alt="img" >
+                    <p>The best mountain to ski is Mammoth Mountain located in California. This is not open to interpretation and is factually 110% accurate.</p><img class="port-main-img" src="https://cdn.pixabay.com/photo/2015/05/08/08/49/mountains-757731_1280.jpg" alt="Mountain Picture" >
                    </dd>
                   
                  </dl>
