--- a/sources.html
+++ b/sources.html
@@ -1,12 +1,5 @@
 <!DOCTYPE html>
-<!--
 
-	Theme Name: Elementy
-	Description: HTML/CSS 
-	Author: Abcgomel 
-	Designed & Coded by Abcgomel
-	
--->
 
 <html lang="en">
  	<head>
@@ -23,9 +16,9 @@
 		<meta charset="utf-8">
 		<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
 		<meta name="robots" content="index, follow" > 
-		<meta name="keywords" content="HTML5 Template" > 
+		<meta name="keywords" content="HTML5" > 
 		<meta name="description" content="Sources Information for Photography" > 
-		<meta name="author" content="ABCgomel">
+		<meta name="author" content="Simon Alexander">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="theme-color" content="#2a2b2f">
     
