--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
             
             <a href="http://cmoffatt21.github.io">Some Link</a>
             <a href="http://ldhillon21.github.io">Some Link</a>
-            
+            <a href="https://kossklob.github.io/">Some Link</a>
             <!-- SUB FOOTER -->
             <div class="footer2-copy-cont clearfix">
               <!-- Social Links -->
