--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@ p {padding: 0!important; margin-top: 0!important; margin-right: 0!important; mar
 					</td>
 				</tr>
 			</table><!-- End Wrapper -->
-			<table width="100%" border="0" cellpadding="0" cellspacing="0" align="center" class="mobile">
+			<table width="100%" border="0" cellpadding="0" cellspacing="0" align="center" class="mobile" style = "background-color: lightblue;">
 				<tr>
 					<td>
 						
