--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ p {padding: 0!important; margin-top: 0!important; margin-right: 0!important; mar
 										<li>Task 8: Bot checks all submissions and comments if not in it. Code works, but needs time to fully run. In Extracredit.py file. therefore I think a 7/10 points is fair here. ✅</li>
 										<li>Extra Credit 1 (5 points): Upvote all comments containing "Trump" ✅</li>
 										<li>Extra Credit 2 (5 points): 200 comments posted ✅</li>
-										<li>Extra Credit 3 (5 points): Smart comment responses. Done in main bot.py file. Did not run for long time. It was very straightforward. I think I deserve 5-10 points here. This was added after I sent in file on sakai, and I can't reupload on sakai for some reason. He ce the screenshot of the addition is below :) ✅</li>
+										<li>Extra Credit 3 (10/25 points): Smart comment responses. Done in main bot.py file. Did not run for long time. It was very straightforward. I think I deserve 5-10 points here. This was added after I sent in file on sakai, and I can't reupload on sakai for some reason. He ce the screenshot of the addition is below :) ✅</li>
 
 
 
